# AmortizedBayesianOptimization

./: .gitignore  01_graph_classes_and_operations.ipynb  02_graph_visualization.ipynb  03_graph_generation.ipynb  04_structural_causal_models.ipynb  05_example_use_case.ipynb  ACBO_COMPONENT_ANALYSIS.md  ACBO_PIPELINE_STATUS_20250129.md  ATTENTION_ARCHITECTURE_TEST.md  BC_MODEL_SERIALIZATION_SOLUTION.md  BC_PARENT_SCALE_IMPLEMENTATION_PLAN.md  BC_UNIFORM_OUTPUT_ROOT_CAUSE_ANALYSIS.md  BOED_script.py  CEO_algorithm.py  CLEANUP_INVENTORY.md  CLEAN_ACBO_SUMMARY.md  DEBUG_REPORT.md  ENCODER_IMPROVEMENTS_INTEGRATION.md  ENCODER_INTEGRATION_SUMMARY.md  END_TO_END_TRAINING_INSTRUCTIONS.md  FIXED_MODEL_VALIDATION_SUMMARY.md  FIX_VISUALIZATION_CONFUSION.md  GRPO_FIXES_SUMMARY.md  GRPO_REFACTORING_README.md  JAX_MIGRATION_SUMMARY.md  METRIC_FIX_SUMMARY.md  NOTEBOOK_VISUALIZATION_FIXES.md  PERFORMANCE_VALIDATION_RESULTS.md  PRINCIPLED_REWARD_REFACTOR.md  QUICK_DEMO_STATUS.md  README.md  README_parent_scale.md  REWARD_ANALYSIS_SUMMARY.md  SFT_DATASET_COLLECTION_PLAN.md  SURROGATE_INTEGRATION_STATUS.md  TASK_PLAN_20250107.md  TASK_PLAN_20250131.md  TASK_PLAN_ACBO_EVALUATION_FRAMEWORK_20250127.md  TASK_PLAN_DYNAMIC_SCM_SIZES_20250127.md  TASK_PLAN_PHASE2_EVALUATION_FIX_20250128.md  (+78 more)
.cursor/: mcp.json
algorithms/: BASE_algorithm.py  BOED_algorithm.py  BO_algorithm.py  CBO_algorithm.py  CEO_ACD_algorithm.py  CEO_algorithm.py  PARENT_2_algorithm.py  PARENT_SCALE_ACD.py  PARENT_SCALE_algorithm.py  PARENT_algorithm.py  RANDOM_SCALE_algorithm.py  corth_algorithm.R  doubly_robust.py
causal_bayes_opt.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
config/: ACBO_EXPERIMENT_README.md  README.md  acbo_comparison_config.yaml  config.yaml  enriched_training.yaml  full_scale_grpo_config.yaml  grpo_enriched_acbo_training.yaml  grpo_quick_demo.yaml  grpo_with_fixes.yaml  model_comparison_config.yaml  test_config.yaml  train_acquisition_config.yaml
configs/: config.yaml  curriculum_default.yaml
data/: test.csv
debugging-bc-training/: README.md  analyze_accuracy_pattern.py  analyze_all_targets.py  analyze_architecture_issue.py  analyze_data_pattern.py  analyze_gradient_vanishing.py  analyze_numerical_sort_results.py  analyze_training.py  analyze_training_plateau.py  analyze_value_distribution.py  analyze_x2_predictions.py  check_confusion_matrix.py  check_final_results.py  check_x4_frequency.py  check_x4_with_numerical_sort.py  debug_demo_structure.py  debug_loss_calculation.py  debug_variable_naming.py  debug_x4_data_pipeline.py  debug_x4_live.py  debug_x4_only.py  debug_x4_predictions.py  demonstration_to_tensor_fixed.py  demonstration_to_tensor_permuted.py  enhanced_bc_trainer.py  enhanced_bc_trainer_fixed.py  fix_variable_sorting.py  gradient_analyzer.py  hyperparam_results.json  hyperparameter_search.py  metrics_tracker.py  monitor_training.py  numerical_sort_training_output.txt  numerical_sort_utils.py  permuted_variable_mapper.py  policy_bc_trainer_fixed.py  policy_bc_trainer_smoothed.py  quick_metrics_check.py  quick_test_numerical_sort.py  quick_variable_check.py  (+16 more)
debugging-grpo/: simple_gradient_test.py
demos/: README.md  evaluate_structure_recovery.py  fixed_causal_recovery.py  full_acd_pipeline_demo.py  full_acd_pipeline_demo_guide.md  improved_structure_recovery.py  maml_causal_discovery_demo.py  minimal_causal_recovery.py  parent_scale_acd_demo.py  progressive_structure_recovery_demo.py  refactored_full_acd_pipeline_demo.py  refactored_utils.py  refactored_utils_guide.md  simplified_causal_discovery.py  utils.py
dev_results/: quick_test_results.json
diffcbed/: __init__.py  replay_buffer.py
docs/: EXPERIMENTAL_VALIDATION_PLAN.md  README.md  USAGE_GUIDE.md  early_stopping_implementation.md  evaluation_guide.md  grpo_notebook_guide.md  two_phase_training.md
envs/: causal_environment.py  distributions.py
evaluation_results/: evaluation_20250903_094446.json  evaluation_20250903_102603.json  evaluation_20250903_110031.json  evaluation_20250903_111240.json  evaluation_20250903_112601.json  evaluation_20250903_113307.json  evaluation_20250903_114934.json  evaluation_20250903_193119.json  evaluation_20250903_193632.json  evaluation_20250903_194924.json  evaluation_20250903_210030.json  evaluation_20250903_214323.json  evaluation_20250904_085008.json  evaluation_20250904_090121.json  evaluation_20250904_104848.json  evaluation_20250904_105120.json  evaluation_20250904_105853.json  evaluation_20250904_105920.json  evaluation_20250904_110055.json  evaluation_20250904_110636.json  evaluation_20250904_111608.json  evaluation_20250904_111739.json  evaluation_20250904_111839.json  evaluation_20250904_112532.json  evaluation_20250904_112952.json  evaluation_20250904_113542.json  evaluation_20250904_113700.json  evaluation_20250904_120014.json  evaluation_20250904_163558.json  evaluation_results.json
example_checkpoints/: acd_model.pt
examples/: README.md  __init__.py  acquisition_strategy_example.py  active_learning_integration_example.py  amortized_cbo_workflow.py  causal_data_demo.py  (+33 more)
(+3830 files in other folders)
