[project]
name = "causal-bayes-opt"
version = "0.1.0"
description = ""
authors = [
    {name = "Harel",email = "hl1824@ic.ac.uk"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyrsistent (>=0.20.0,<0.21.0)",
    "jax (>=0.6.1,<0.7.0)",
    "dm-haiku (>=0.0.11,<0.1.0)",
    "optax (>=0.2.4,<0.3.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "flax (>=0.10.6,<0.11.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
    "unit: marks tests as unit tests"
]

[tool.sphinx.autodoc_default_options]
members = true
undoc-members = false
show-inheritance = true
exclude-members = "_*"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
sphinx-autodoc-typehints = "^3.2.0"

