[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-bayes-opt"
version = "0.1.0"
description = "Amortized Causal Bayesian Optimization framework"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "jax>=0.4.20",
    "numpy>=1.24.0",
    "pyrsistent>=0.19.0",
    "dm-haiku>=0.0.10",
    "optax>=0.1.7",
    "typing-extensions>=4.0.0",
    "psutil (>=7.0.0,<8.0.0)",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/causal-bayes-opt"
Repository = "https://github.com/yourusername/causal-bayes-opt"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-v", "--strict-markers"]

[tool.mypy]
python_version = "3.9"
packages = ["causal_bayes_opt"]
mypy_path = "src"
strict = true

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
select = ["E", "F", "W", "I"]
line-length = 100
target-version = "py39"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"

